set up rudimentary build process

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./out/main.js",
+    "watch": "cd src && watch \"babel ./*.js -d ../out\""
   },
   "author": "",
   "license": "ISC"
