--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-env": "^1.1.4",
+    "big-integer": "^1.6.17",
     "lodash": "^4.17.3"
   },
   "devDependencies": {},
